Fix background image not covering entire viewport

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@ body {
     background-color: $main-background-color;
     font-size: $main-text-size;
     background-image: url('../resources/assets/landscape.jpg');
+    background-size: cover;
 }
 
 code {
